Fix markdown format , Add missing or incomplete description, Add spacing before first para. (#223)
* Add space above first para

* Add missing or incomplete descriptions

* Fix the Markdown Format while rendering

--- a/src/css/custom.css
+++ b/src/css/custom.css
@@ -601,7 +601,7 @@ article h4 {
 }
 
 .markdown > p:first-of-type {
-  margin-bottom: 2rem !important;
+  margin-top: 2rem !important;
 }
 
 .skeleton-container {
@@ -730,6 +730,16 @@ article h4 {
   display: inline !important;
   color: var(--ifm-font-color-base) !important;
   font-size: 1rem !important;
+}
+
+/* Allow inline code styling in overview pages */
+[class*="generatedIndexPage"] p code {
+  all: revert !important;
+  background: var(--ifm-code-background) !important;
+  border-radius: 3px !important;
+  font-family: var(--ifm-font-family-monospace) !important;
+  padding: var(--ifm-code-padding-vertical) var(--ifm-code-padding-horizontal) !important;
+  font-size: 0.9em !important;
 }
 
 /* Add colon separator between heading and description */
